[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levels/TitleScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Title Label 70 3.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Light2D 2.gd" type="Script" id=3]
[ext_resource path="res://Scripts/PlayerTrans.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://identity_gradient.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.5377, 29.4625 )

[node name="Node2D" instance=ExtResource( 1 )]

[node name="Player" parent="." index="0"]
visible = false
position = Vector2( 58.7097, 749.237 )
script = null

[node name="Player Sprite" parent="Player" index="0"]
visible = false
modulate = Color( 1, 1, 1, 1 )
self_modulate = Color( 1, 1, 1, 1 )
position = Vector2( 0.0367562, 0.0151529 )
scale = Vector2( 0.108083, 0.115517 )

[node name="CollisionShape2D" parent="Player" index="1"]
visible = false

[node name="Sprite" parent="Goal" index="0"]
position = Vector2( 0, 0.620117 )

[node name="Title Proc Body" parent="." index="6"]
position = Vector2( 171.903, 358.809 )

[node name="Title Label" parent="Control" index="0"]
margin_left = 56.0
margin_top = 41.0
margin_right = 1169.0
margin_bottom = 540.0
text = "Though on the winning side, there is nothing more worth fighting for. I have no one, not even myself for company. The man I once knew was gone..."
script = ExtResource( 2 )

[node name="Light2D" parent="." index="9"]
position = Vector2( 628.258, 379.81 )
scale = Vector2( 6.78357, 6.78357 )
script = ExtResource( 3 )

[node name="PlayerTrans" type="KinematicBody2D" parent="." index="10"]
position = Vector2( 69.6561, 642.166 )
collision_layer = 13
collision_mask = 2
script = ExtResource( 4 )

[node name="overlay" type="Sprite" parent="PlayerTrans" index="0"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -0.0211758, -0.311422 )
z_index = 2
texture = ExtResource( 5 )

[node name="gradient" type="Sprite" parent="PlayerTrans" index="1"]
position = Vector2( 0, 0.527202 )
scale = Vector2( 0.110144, 0.118107 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTrans" index="2"]
position = Vector2( 0, -0.313385 )
shape = SubResource( 1 )
[connection signal="body_entered" from="Goal" to="PlayerTrans" method="_on_Goal_body_entered"]
[connection signal="body_entered" from="Title Proc Body/Title Proc" to="PlayerTrans" method="_on_Title_Proc_body_entered"]
